[project]
name = "condor_tools"
version = "1.1.1"
description = "A collection of tools for working with Condor jobs and data."
requires-python = "==3.9.21"
authors = [{name = "Tom Runting", email = "thomas.runting@cern.ch"}]

dependencies = [
    "coverage==7.10.3",
    "exceptiongroup==1.3.0",
    "htcondor==24.0.10",
    "iniconfig==2.1.0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "prettytable==3.11.0",
    "pyfakefs==5.9.2",
    "Pygments==2.19.2",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "pytest-mock==3.14.1",
    "ruff==0.12.9",
    "termcolor==2.4.0",
    "tomli==2.2.1",
    "typing_extensions==4.14.1",
    "wcwidth==0.2.13",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["condor_tools*"]

[tool.ruff]
line-length = 120
exclude = ['env']

[tool.ruff.lint]
extend-select = [
    "B",           # flake8-bugbear
    "I",           # isort
    "C4",          # flake8-comprehensions
    "ISC",         # flake8-implicit-str-concat
    "G",           # flake8-logging-format
    "PGH",         # pygrep-hooks
    "PIE",         # flake8-pie
    "PL",          # pylint
    "RUF",         # Ruff-specific
    "T20",         # flake8-print
    "UP",          # pyupgrade
    "YTT",         # flake8-2020
    "EXE",         # flake8-executable
    "NPY",         # NumPy specific rules
    "TID251",      # flake8-tidy-imports
]
ignore = [
    "G004",    # Logging f-string
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
